// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels/ChannelItem AppView smoke-test 1`] = `
<li class="MuiListItem-container css-oyakqy-MuiListItem-container">
  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-aimc6m-MuiListItem-root">
    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar-11 makeStyles-colorAvatar-12 css-1onlcy6-MuiAvatar-root">
        </div>
      </div>
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiListItemText-root MuiListItemText-multiline makeStyles-root-10 css-konndc-MuiListItemText-root">
          <div class="MuiBox-root css-70qvj9">
            <div class="MuiBox-root css-1xsd608">
              edge
            </div>
          </div>
          <div class="MuiBox-root css-15aqakd">
            <div class="MuiBox-root css-0">
              1.11.3 (ARM64)
            </div>
            <div class="MuiBox-root css-n085mf">
              <div class="MuiBox-root css-k008qs">
                <div class="MuiBox-root css-0">
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="ScheduleIcon"
                       aria-label="Release date"
                       data-mui-internal-clone-element="true"
                  >
                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                    </path>
                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                    </path>
                  </svg>
                </div>
                <div class="MuiBox-root css-1iuj5ih">
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="MuiListItemSecondaryAction-root css-518kzi-MuiListItemSecondaryAction-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-1pux6rn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-controls="simple-menu-4"
              aria-haspopup="true"
              aria-label="Open menu"
              data-testid="more-menu-open-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="MoreVertIcon"
        >
          <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
          </path>
        </svg>
        <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
        </span>
      </button>
    </div>
  </div>
</li>
`;

exports[`channels/ChannelItem NoArch smoke-test 1`] = `
<li class="MuiListItem-container css-oyakqy-MuiListItem-container">
  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-aimc6m-MuiListItem-root">
    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar-8 makeStyles-colorAvatar-9 css-1onlcy6-MuiAvatar-root">
          e
        </div>
      </div>
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiListItemText-root MuiListItemText-multiline makeStyles-root-7 css-konndc-MuiListItemText-root">
          <div class="MuiBox-root css-70qvj9">
            <div class="MuiBox-root css-1xsd608">
              edge
            </div>
          </div>
          <div class="MuiBox-root css-15aqakd">
            <div class="MuiBox-root css-0">
              1.11.3
            </div>
            <div class="MuiBox-root css-n085mf">
              <div class="MuiBox-root css-k008qs">
                <div class="MuiBox-root css-0">
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="ScheduleIcon"
                       aria-label="Release date"
                       data-mui-internal-clone-element="true"
                  >
                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                    </path>
                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                    </path>
                  </svg>
                </div>
                <div class="MuiBox-root css-1iuj5ih">
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="MuiListItemSecondaryAction-root css-518kzi-MuiListItemSecondaryAction-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-1pux6rn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-controls="simple-menu-3"
              aria-haspopup="true"
              aria-label="Open menu"
              data-testid="more-menu-open-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="MoreVertIcon"
        >
          <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
          </path>
        </svg>
        <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
        </span>
      </button>
    </div>
  </div>
</li>
`;

exports[`channels/ChannelItem NoPackage smoke-test 1`] = `
<li class="MuiListItem-container css-oyakqy-MuiListItem-container">
  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-aimc6m-MuiListItem-root">
    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar-5 makeStyles-colorAvatar-6 css-1onlcy6-MuiAvatar-root">
          e
        </div>
      </div>
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiListItemText-root MuiListItemText-multiline makeStyles-root-4 css-konndc-MuiListItemText-root">
          <div class="MuiBox-root css-70qvj9">
            <div class="MuiBox-root css-1xsd608">
              edge
            </div>
          </div>
          <div class="MuiBox-root css-15aqakd">
            <div class="MuiBox-root css-0">
              No package
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="MuiListItemSecondaryAction-root css-518kzi-MuiListItemSecondaryAction-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-1pux6rn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-controls="simple-menu-2"
              aria-haspopup="true"
              aria-label="Open menu"
              data-testid="more-menu-open-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="MoreVertIcon"
        >
          <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
          </path>
        </svg>
        <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
        </span>
      </button>
    </div>
  </div>
</li>
`;

exports[`channels/ChannelItem ShowArch smoke-test 1`] = `
<li class="MuiListItem-container css-oyakqy-MuiListItem-container">
  <div class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-aimc6m-MuiListItem-root">
    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar-2 makeStyles-colorAvatar-3 css-1onlcy6-MuiAvatar-root">
          e
        </div>
      </div>
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiListItemText-root MuiListItemText-multiline makeStyles-root-1 css-konndc-MuiListItemText-root">
          <div class="MuiBox-root css-70qvj9">
            <div class="MuiBox-root css-1xsd608">
              edge
            </div>
          </div>
          <div class="MuiBox-root css-15aqakd">
            <div class="MuiBox-root css-0">
              1.11.3 (ARM64)
            </div>
            <div class="MuiBox-root css-n085mf">
              <div class="MuiBox-root css-k008qs">
                <div class="MuiBox-root css-0">
                  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                       focusable="false"
                       aria-hidden="true"
                       viewbox="0 0 24 24"
                       data-testid="ScheduleIcon"
                       aria-label="Release date"
                       data-mui-internal-clone-element="true"
                  >
                    <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
                    </path>
                    <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
                    </path>
                  </svg>
                </div>
                <div class="MuiBox-root css-1iuj5ih">
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="MuiListItemSecondaryAction-root css-518kzi-MuiListItemSecondaryAction-root">
    <div>
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-1pux6rn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
              aria-controls="simple-menu-1"
              aria-haspopup="true"
              aria-label="Open menu"
              data-testid="more-menu-open-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="MoreVertIcon"
        >
          <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2">
          </path>
        </svg>
        <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
        </span>
      </button>
    </div>
  </div>
</li>
`;
